--- a/css/style.css
+++ b/css/style.css
@@ -25,19 +25,6 @@ a {
   color: #000;
 }
 
-.bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-image: url("../img/320.png");
-  width: 320px;
-  height: 3151px;
-  background-position: center top;
-  background-size: 100%;
-  z-index: -5;
-  opacity: .4;
-}
-
 .popup {
   position: fixed;
   display: -webkit-box;
@@ -322,7 +309,7 @@ a {
   width: 100%;
   -webkit-transition: none;
   transition: none;
-  background: #eee7e7;
+  background: #ffd9c7;
 }
 
 .header__mob-menu .header__item {
